[gd_scene load_steps=2 format=3 uid="uid://oytr6xl1w1q"]

[ext_resource type="Script" uid="uid://blpj7fff30lld" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 68.0
offset_bottom = 55.0
alignment = 1

[node name="ButtonHost" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cr√©er une partie"

[node name="ButtonJoin" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rejoindre une partie"

[node name="LineEditIP" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Ip:"
